Fixed menu going behind header

--- a/styles.scss
+++ b/styles.scss
@@ -62,11 +62,12 @@ hr{
 	width: 100%;
 	display: flex;
 	justify-content: space-between;
-	@media screen and (max-width: $breakpoint){
+	z-index: 1;
+	/*@media screen and (max-width: $breakpoint){
 		//flex-direction: column;
 		//align-items: flex-end;
-		z-index: 1;
-	}
+		//z-index: 1;
+	}*/
 	a{
 		color: $text-colour;
 		padding-left: 5px;
